--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
    let op 1: dit kan de layout soms kan wijzigen 
    let op 2: laat 1 sterretje voor { staan als je commentaar weghaalt */
 /*  * {border: 1px dotted black;}   */
-  
+
 /* zorg dat elke box een doorzichtige donkere achtergrond krijgt, 
    hoe meer boxen in elkaar hoe donkerder de achtergrondkleur 
    letop: laat 1 sterretje voor { staan als je commentaar weghaalt */
@@ -40,7 +40,7 @@ div {                             /* geldt voor div */
 body{
   background-image: url(afbeeldingen/fight\ background.jpeg);
   background-position: center;
-  
+
 }
 
 .page {
@@ -135,10 +135,15 @@ nav li a.active {
   width: 250px;
   padding-right: 15px; /* zorgt dat plaatje niet tegen tekst komt */
 }
-
+.tekstssss{
+  background-color:rgba(90,90,90,0.8);
+  padding: 10px;
+}
 .item-tekst {
   float: right;
   width: 450px;
+  background-color:rgba(90,90,90,0.8);
+  padding: 10px;
 }
 
 /************************* SUBPAGINA *************************/
