--- a/style.css
+++ b/style.css
@@ -42,7 +42,14 @@ body{
   background-position: center;
 
 }
-
+.teksttwee {
+  background-color: rgba(90,90,90,0.8);
+  padding:10px;
+}
+.plaatjemma{
+  float:left;
+  width: 250px;
+}
 .page {
   width: 700px;                   /* vaste breedte van 700 pixels */
   margin: 10px auto;              /* boven en onder 10 pixels marge,
@@ -124,7 +131,7 @@ nav li a.active {
 }
 
 
-/************************* HOOFDPAGINA *************************/
+/************************* HOOFDPAGINA EN LEGEDS *************************/
 
 /* Indeling en opmaak voor hoofdpagina */
 
@@ -145,7 +152,14 @@ nav li a.active {
   background-color:rgba(90,90,90,0.8);
   padding: 10px;
 }
-
+.item-titel {
+  float: right;
+  width: 450px;
+  background-color:rgba(90,90,90,0.8);
+  padding: 10px;
+  margin-top:50px;
+  font-size:2em;
+}
 /************************* SUBPAGINA *************************/
 
 /* Indeling en opmaak voor subpagina */
